@@ -102,6 +102,9 @@ Library
 - Issue #13979: A bug in ctypes.util.find_library that caused
   the wrong library name to be returned has been fixed.
 
+- Issue #1326113: distutils' build_ext command --libraries option now
+  correctly parses multiple values separated by whitespace or commas.
+
 - Issue #13993: HTMLParser is now able to handle broken end tags.
 
 - Issue #13960: HTMLParser is now able to handle broken comments.
